添加点缀色

--- a/application/index/view/index/shop_backend/website_basic.html
+++ b/application/index/view/index/shop_backend/website_basic.html
@@ -50,7 +50,7 @@
 
         <div class="form-container">
             <div class="layui-form-item">
-                <label class="layui-form-label">网站Logo(像素：200*200)</label>
+                <label class="layui-form-label">网站Logo<br/>(像素：200*200)</label>
                 <div class="layui-input-block">
                     <div class="layui-upload" style="margin-top: 10px;">
                         <button type="button" class="layui-btn" id="slogo_file-upload">上传图片(1张)</button>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">浏览器标志(像素：155*65)</label>
+                <label class="layui-form-label">浏览器标志<br/>(像素：155*65)</label>
                 <div class="layui-input-block">
                     <div class="layui-upload" style="margin-top: 10px;">
                         <button type="button" class="layui-btn" id="logo_file-upload">上传图片(1张)</button>
