调整商品信息

--- a/application/index/view/index/shop_backend/save_product.html
+++ b/application/index/view/index/shop_backend/save_product.html
@@ -480,7 +480,12 @@
                                 }, function () {
                                     window.location.href='/?s=index/save_product&company_id={$company_id}&company_type={$company_type}';
                                 }, function(){
-                                    window.location.href='/?s=index/save_inventory&company_id={$company_id}&company_type={$company_type}&id='+res.id;
+                                    var url = '/?s=index/save_inventory&company_id={$company_id}&company_type={$company_type}&id='+res.id;
+                                    {if $id>0}
+                                        parent.location.href = url;
+                                    {else}
+                                        window.location.href = url;
+                                    {/if}
                                 });
                             }else{
                                 layer.confirm('请选择你的下一步操作', {
@@ -488,7 +493,12 @@
                                 }, function () {
                                     window.location.href='/?s=index/save_product&company_id={$company_id}&company_type={$company_type}&type={$type}';
                                 }, function(){
-                                    window.location.href='/?s=index/save_inventory&company_id={$company_id}&company_type={$company_type}&type=1&id='+res.id;
+                                    var url = '/?s=index/save_inventory&company_id={$company_id}&company_type={$company_type}&type=1&id='+res.id;
+                                    {if $id>0}
+                                        parent.location.href = url;
+                                    {else}
+                                        window.location.href = url;
+                                    {/if}
                                 });
                             }
 
