--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -2653,7 +2653,14 @@
                             // parent.layer.close(index);
                             // parent.window.location.reload();
                             // get_goods_info(res.data.goods_id);
-                            window.location.href="/?s=index/save_shelf&id="+res.data.goods_id+"&page_type="+data.field['page_type']+'&company_id={$company_id}&company_type={$company_type}'
+
+                            layer.confirm('请选择你的下一步操作', {
+                                btn: ['配置库存信息', '继续编辑信息']
+                            }, function () {
+                                $(window.top.document).find('#content-area').find('.iframe_info').attr('src','/?s=index/save_inventory&company_id={$company_id}&company_type={$company_type}&type={$type2}&is_shelf_link=1&id='+res.data.goods_id);
+                            }, function () {
+                                window.location.href="/?s=index/save_shelf&id="+res.data.goods_id+"&page_type="+data.field['page_type']+'&company_id={$company_id}&company_type={$company_type}&type={$type2}'
+                            });
                         }
                     });
                 },
