--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -101,6 +101,7 @@
 
         .have_specs_div select{width:150px;}
         .have_specs_div input{width:150px;}
+        .layui-form-select .layui-input{width:100%;}
 
         .fees_table select{width:150px;}
         .fees_table input{width:150px;}
