调整商品信息

--- a/application/index/view/index/shop_backend/save_procurement.html
+++ b/application/index/view/index/shop_backend/save_procurement.html
@@ -428,7 +428,13 @@
                             if(currentUrl.href=='https://dtc.gogo198.net/?s=index/website_shop&typ={$company_type}&company_id={$company_id}'){
                                 window.location.href="/?s=index/shelf_manage&company_id={$company_id}&company_type={$company_type}";
                             }else{
-                                parent.location.reload();
+                                layer.confirm('请选择你的下一步操作', {
+                                    btn: ['配置基础信息', '继续添加采购']
+                                }, function () {
+                                    $(window.top.document).find('#content-area').find('.iframe_info').attr('src','/?s=index/shelf_manage&company_id={$company_id}&company_type={$company_type}');
+                                }, function () {
+                                    window.location.reload();
+                                });
                             }
                         }
                     });
