--- a/application/index/view/index/shop_backend/save_inventory.html
+++ b/application/index/view/index/shop_backend/save_inventory.html
@@ -465,7 +465,7 @@
                                 layer.confirm('请选择你的下一步操作', {
                                     btn: ['前往管理上架', '继续编辑信息']
                                 }, function () {
-                                    $(window.top.document).find('#content-area').find('.iframe_info').attr('src','/?s=index/shelf_manage&company_id={$company_id}&company_type={$company_type}&type={$type2}');
+                                    $(window.top.document).find('#content-area').find('.iframe_info').attr('src','/?s=index/shelf_manage&company_id={$company_id}&company_type={$company_type}');
                                 }, function () {
                                     window.location.href='/?s=index/save_inventory&company_id={$company_id}&company_type={$company_type}&type={$type2}';
                                 });
