--- a/application/index/view/index/shop_backend/select_shelf.html
+++ b/application/index/view/index/shop_backend/select_shelf.html
@@ -94,7 +94,7 @@
                 <div class="layui-tab-item layui-show">
                     <!--自主导流start-->
                     {if empty($list['my_guide'])}
-                        <p style="font-size:15px;">自主导流暂未配置，请先在配置站点</a></p>
+                        <p style="font-size:15px;">自主导流“菜单”暂未配置，请先在配置网站菜单</a></p>
                     {else}
                         <p style="margin-bottom:15px;font-size:15px;text-align: center;">配置该商品在相应导流板块显示规则：<span style="color:#e60000;">商品关键字</span>在相应<span style="color:#e60000;">导流板块关键字</span>中存在，将会自动显示在导流板块中。</p>
                         <table class="layui-table" style="width: 100%;margin:0 auto;">
@@ -147,7 +147,7 @@
                 </div>
                 <div class="layui-tab-item">
                     {if empty($list['my_shop'])}
-                        <p style="font-size:15px;">自主商城暂未配置，请先在配置站点</a></p>
+                        <p style="font-size:15px;">自主商城“导流模块”暂未配置，请先在配置网店“导流模块”</a></p>
                     {else}
                         <table class="layui-table" style="width: 100%;">
                             <thead>
