调整商品信息

--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -109,16 +109,16 @@
         .spec_table select{width:150px;}
         .spec_table input{width:150px;}
 
-        .reduction_div select{width:150px;}
+        .reduction_div select,.reduction_div .layui-form-select{width:150px;}
         .reduction_div input{width:150px;}
 
-        .gift_div select{width:150px;}
+        .gift_div select,.gift_div .layui-form-select{width:150px;}
         /*.gift_div input{width:150px;}*/
 
-        .noinclude_table select{width:150px;}
+        .noinclude_table select,.noinclude_table .layui-form-select{width:150px;}
         .noinclude_table input{width:150px;}
 
-        .potential_table select{width:150px;}
+        .potential_table select,.potential_table .layui-form-select{width:150px;}
         .potential_table input{width:150px;}
 
         .warn_select{width:130px;}
